--- a/Module_1/index.html
+++ b/Module_1/index.html
@@ -125,21 +125,21 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     <div class="photo-box">
                         <div class="photo-item">
-                            <div class="photo">
+                            <div class="photo-holder">
                                 <img src="img/photo_1.png" alt="">
                             </div>
                             <b>matthew dix</b>
                             <i>Graphic Designer</i>
                         </div>
                         <div class="photo-item">
-                            <div class="photo">
+                            <div class="photo-holder">
                                 <img src="img/photo_2.png" alt="">
                             </div>
                             <b>matthew dix</b>
                             <i>Graphic Designer</i>
                         </div>
                         <div class="photo-item">
-                            <div class="photo">
+                            <div class="photo-holder">
                                 <img src="img/photo_3.png" alt="">
                             </div>
                             <b>matthew dix</b>
