logo-partner added

--- a/Module_1/index.html
+++ b/Module_1/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Montserrat:400,700|Roboto:300i,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="fonts/style.css">
     <link rel="stylesheet" href="css/main.css">
     <title>MoGo</title>
 </head>
@@ -63,27 +64,27 @@
                         <h3>Amazing services</h3>
                     </div>
                     <div class="services-list">
-                        <div class="services-block">
+                        <div class="services-item">
                             <b>photography</b>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                         </div>
-                        <div class="services-block">
+                        <div class="services-item">
                             <b>web design</b>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                         </div>
-                        <div class="services-block">
+                        <div class="services-item">
                             <b>creativity</b>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                         </div>
-                        <div class="services-block">
+                        <div class="services-item">
                             <b>seo</b>
                             <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
                         </div>
-                        <div class="services-block">
+                        <div class="services-item">
                             <b>css/html</b>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                         </div>
-                        <div class="services-block">
+                        <div class="services-item">
                             <b>digital</b>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                         </div>
@@ -128,26 +129,57 @@
                             <div class="photo-holder">
                                 <img src="img/photo_1.png" alt="">
                             </div>
-                            <b>matthew dix</b>
-                            <i>Graphic Designer</i>
+                            <h5>matthew dix</h5>
+                            <p>
+                                <i>Graphic Designer</i>
+                            </p>
                         </div>
                         <div class="photo-item">
                             <div class="photo-holder">
                                 <img src="img/photo_2.png" alt="">
                             </div>
-                            <b>matthew dix</b>
-                            <i>Graphic Designer</i>
+                            <h5>Christopher Campbell</h5>
+                            <p>
+                                <i>Branding/UX design</i>
+                            </p>
                         </div>
                         <div class="photo-item">
                             <div class="photo-holder">
                                 <img src="img/photo_3.png" alt="">
                             </div>
-                            <b>matthew dix</b>
-                            <i>Graphic Designer</i>
+                            <h5>Michael Fertig</h5>
+                            <p>
+                                <i>Developer</i>
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="partner-logo">
+                <div class="container">
+                    <div class="logo-holder">
+                        <div class="logo-item">
+                            <img src="img/partner-logo-1.png" alt="partner-logo">
+                        </div>
+                        <div class="logo-item">
+                            <img src="img/partner-logo-2.png" alt="partner-logo">
+                        </div>
+                        <div class="logo-item">
+                            <img src="img/partner-logo-3.png" alt="partner-logo">
+                        </div>
+                        <div class="logo-item">
+                            <img src="img/partner-logo-4.png" alt="partner-logo">
+                        </div>
+                        <div class="logo-item">
+                            <img src="img/partner-logo-5.png" alt="partner-logo">
+                        </div>
+                        <div class="logo-item">
+                            <img src="img/partner-logo-6.png" alt="partner-logo">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container"></div>
         </main>
     </div>
 </body>
