--- a/Module_1/index.html
+++ b/Module_1/index.html
@@ -374,7 +374,7 @@
                         </div>
                         <div class="clients-list">
                             <div class="clients-holder">
-                                <img class="client-img" src="img/client-1.jpg" alt="client">
+                                <img class="clients-img" src="img/client-1.jpg" alt="client">
                                 <div class="clients-text">
                                     <h5>Matthew Dix</h5>
                                     <p>
@@ -386,9 +386,9 @@
                                 </div>
                             </div>
                             <div class="clients-holder">
-                                <img class="client-img" src="img/client-2.jpg" alt="client">
+                                <img class="clients-img" src="img/client-2.jpg" alt="client">
                                 <div class="clients-text">
-                                    <h5>Matthew Dix</h5>
+                                    <h5>Nick Karvounis</h5>
                                     <p>
                                         <i>Graphic Design</i>
                                     </p>
@@ -398,9 +398,9 @@
                                 </div>
                             </div>
                             <div class="clients-holder">
-                                <img class="client-img" src="img/client-3.jpg" alt="client">
+                                <img class="clients-img" src="img/client-3.jpg" alt="client">
                                 <div class="clients-text">
-                                    <h5>Matthew Dix</h5>
+                                    <h5>Jaelynn Castillo</h5>
                                     <p>
                                         <i>Graphic Design</i>
                                     </p>
@@ -410,9 +410,9 @@
                                 </div>
                             </div>
                             <div class="clients-holder">
-                                <img class="client-img" src="img/client-4.jpg" alt="client">
+                                <img class="clients-img" src="img/client-4.jpg" alt="client">
                                 <div class="clients-text">
-                                    <h5>Matthew Dix</h5>
+                                    <h5>Mike Petrucci</h5>
                                     <p>
                                         <i>Graphic Design</i>
                                     </p>
